--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -1,3 +1,5 @@
+/* TEST */
+
 body {
   font-family: 'EB Garamond', serif;
   background: url(../images/birds-background.jpg) no-repeat center center fixed;
